# easyhttp-python

./: .gitignore  README.md  README_PY.md  README_RU.md  pyproject.toml  requirements.txt
docs/: EasyHTTP.md  EasyHTTPAsync.md  api.md
easyhttp/: __init__.py  core.py  wrapper.py
easyhttp_python/: __init__.py  _discovery.py  core.py  wrapper.py
examples/: basic_ping.py  device_control.py  sensor_simulator.py  two_devices.py
examples/async/: basic_ping.py  callback_preview.py  device_control.py  sensor_simulator.py  two_devices.py
examples/sync/: basic_ping.py  callback_preview.py  device_control.py  sensor_simulator.py  two_devices.py
